--- a/css/agency.css
+++ b/css/agency.css
@@ -113,7 +113,7 @@ body {
         font-size: 1.25em; } }
 
 header.masthead {
-  background-image: url("../img/header-bg.JPG");
+  background-image: url("../header-bg.JPG");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
